# ag

./: .env.example  .gitignore  README.md  pyproject.toml
src/ag/: __init__.py  agent.py  cli.py  env.py  llm.py  prompt.py  stdout.py  tool.py  utils.py
src/ag/tools/: bash.py
